[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemys/enemy_1.gd" type="Script" id=1]
[ext_resource path="res://enemys/resources/enemy_1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15, 13.7214 )

[node name="enemy_1_node" type="Node2D"]
light_mask = 8
script = ExtResource( 1 )

[node name="enemy_1_kin_body" type="KinematicBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="enemy_1_kin_body"]
texture = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="enemy_1_kin_body"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_1_kin_body/Area2D"]
position = Vector2( -0.115982, 1.62375 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="enemy_1_kin_body"]
position = Vector2( 5.96046e-007, -14.8457 )
scale = Vector2( 1.54512, 0.176527 )
[connection signal="area_entered" from="enemy_1_kin_body/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="screen_exited" from="enemy_1_kin_body/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
